1.3.2 - 2004/07/15
------------------
FIXES:
- Added missing OpenLibrary() of locale.library. (Alex Pagnoni)



1.3.1 - 2004/05/15
------------------
FIXES:
- Fixed wrong handling of module dependencies check. (Alex Pagnoni)



1.3 - 2004/04/15
----------------
NEW FEATURES:
- Added support for external events. (Alex Pagnoni)

FIXES:
- Fixed wrong Italian localized strings. (Alex Pagnoni)



1.2 - 2003/12/15
----------------
NEW FEATURES:
- Added trashcan support. (Alex Pagnoni)
- Added company field. (Alex Pagnoni)
- Added close button. (Alex Pagnoni)
- Added support for recurrent events. (cristina)
- Optimized code. (Alex Pagnoni)

CHANGES:
- Adapted to Xen Core 2.1 organization. (Alex Pagnoni)
- Now event page is opened when adding a new event. (Alex Pagnoni)
- Improved shifting in calendar views. (cristina)



1.1.2 - 2003/10/11
------------------
CHANGES:
- Now the description field is required. (robywan)

FIXES:
- Fixed negative days bug in week view. (Alex Pagnoni)



1.1.1 - 2003/09/30
------------------
NEW FEATURES:
- Added "restrict to" filter. (Alex Pagnoni)

CHANGES:
- Now events with no date in day and week views have a "-" sign in front
  of them. (Alex Pagnoni)
- Now day event links in summary have title property set. (Alex Pagnoni)

FIXES:
- Fixed events filtering in xencalendar.php. (Alex Pagnoni)
- Added missing field locale string. (Alex Pagnoni)



1.1 - 2003/05/15
----------------

NEW FEATURES:
- Now events can be automatically added by clicking on the calendar. (Alex Pagnoni)

FIXES:
- Fixed columns width in week view. (robywan)



1.0.3 - 2003/04/18
------------------
CHANGES:
- Improved summary layout. (Alex Pagnoni)



1.0.2 - 2003/04/15
------------------
FIXES:
- Fixed disappearing mini icons under Internet Explorer (xencalendar.hui).
  (Alex Pagnoni)
- Fixed wrong "showevent" attribute in xencalendar.library. (Alex Pagnoni)



1.0.1 - 2003/03/15
------------------
FIXES:
- Now the summary calendar shows the right date. (Alex Pagnoni)

