@@ -1,0 +1,2 @@
+mycalendar                  = My Calendar
+new_event.button            = New event
