@@ -1,0 +1,2 @@
+mycalendar                  = Il mio Calendario
+new_event.button            = Nuovo evento
