@@ -1,3 +1,10 @@
+2.
+------------------
+NEW FEATURES:
+- Added dashboard widget with my calendar. (Alex Pagnoni)
+
+
+
 1.3.2 - 2004/07/15
 ------------------
 FIXES:
